# ChroniconSaveEditor

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build_windows_portable.ps1
src/chronicon_save_editor/: __init__.py  __main__.py  main.py  models.py
src/chronicon_save_editor/data/: __init__.py  field_map.json
src/chronicon_save_editor/parser/: __init__.py  community_map.py  equipped_items.py  inventory_items.py  json_container.py  level.py  progression.py
src/chronicon_save_editor/services/: __init__.py  backup.py  save_paths.py
src/chronicon_save_editor/ui/: main_window.py
tests/: test_backup.py  test_equipped_items.py  test_inventory_items.py  test_json_container.py  test_level.py  test_progression.py  test_save_paths.py
