[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronicon-save-editor"
version = "0.1.0"
description = "Cross-platform open-source Chronicon save editor desktop app."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[project.scripts]
chronicon-save-editor = "chronicon_save_editor.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chronicon_save_editor = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp -p no:cacheprovider"
